--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "leagueof",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "crc": "^3.2.1",
+    "etag": "^1.5.1",
+    "ms": "^0.7.0",
+    "on-finished": "^2.2.0"
+  },
   "repository": {},
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -15,10 +20,12 @@
     "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-imagemin": "^0.9.2",
     "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
+    "grunt-jsdoc": "^0.5.8",
     "grunt-karma": "^0.10.1",
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
