--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "angular": "^1.3.0",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "raphael": "~2.1.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
