--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "leagueof",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "grunt-contrib-sass": "^0.9.2"
+  },
   "repository": {},
   "devDependencies": {
     "grunt": "^0.4.5",
