--- a/.jshintrc
+++ b/.jshintrc
@@ -12,7 +12,7 @@
   "newcap": true,
   "noarg": true,
   "undef": true,
-  "unused": true,
+  "unused": false,
   "strict": true,
   "trailing": true,
   "smarttabs": true,
