--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "raphael": "~2.1.4"
+    "raphael": "~2.1.4",
+    "velocity": "~1.2.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
