--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-route": "^1.3.0",
     "angular-touch": "^1.3.0",
     "raphael": "~2.1.4",
-    "velocity": "~1.2.2"
+    "velocity": "~1.2.2",
+    "angular-animate": "~1.3.15"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
